--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
         <img
           class="img-card"
           src="images/icon-cart.svg"
+          alt="img-card"
           onclick="showShopMenu()"
         />
-        <img class="img-person" src="images/image-avatar.png" />
+        <img class="img-person" alt="img-person" src="images/image-avatar.png" />
       </div>
       <p class="card-num"></p>
     </header>
@@ -59,7 +60,7 @@
       <h4 class="head-in">Cart</h4>
       <p class="cartContent">Your cart is empty</p>
       <div class="info-shopping">
-        <img class="img-shopping" src="images/image-product-1-thumbnail.jpg" />
+        <img class="img-shopping" alt="img-shopping" src="images/image-product-1-thumbnail.jpg" />
         <p class="content-phargh above">
           Fall Limited Edition Sneakers $125.00 <span id="low">X</span
           ><span id="item"></span><span id="price-num"></span>
@@ -67,6 +68,7 @@
         <img
           class="img-delete"
           src="images/icon-delete.svg"
+          alt="img-delete"
           onclick="deleteItem()"
         />
       </div>
@@ -74,10 +76,10 @@
     </div>
     <section class="main-slider containerr">
       <div class="slider">
-        <img class="mySlides" src="images/image-product-1.jpg" />
-        <img class="mySlides" src="images/image-product-2.jpg" />
-        <img class="mySlides" src="images/image-product-3.jpg" />
-        <img class="mySlides" src="images/image-product-4.jpg" />
+        <img class="mySlides" alt="slide-img" src="images/image-product-1.jpg" />
+        <img class="mySlides" alt="slide-img" src="images/image-product-2.jpg" />
+        <img class="mySlides" alt="slide-img" src="images/image-product-3.jpg" />
+        <img class="mySlides" alt="slide-img" src="images/image-product-4.jpg" />
         <button class="prev" onclick="plusDivs(-1)">&#10094;</button>
         <button class="next" onclick="plusDivs(1)">&#10095;</button>
       </div>
@@ -85,10 +87,10 @@
       <div class="slide-above">
         <button class="btn-hide" onclick="hideAbove()">&times;</button>
         <div class="slidder">
-          <img class="slide-desk" src="images/image-product-1.jpg" />
-          <img class="slide-desk" src="images/image-product-2.jpg" />
-          <img class="slide-desk" src="images/image-product-3.jpg" />
-          <img class="slide-desk" src="images/image-product-4.jpg" />
+          <img class="slide-desk" alt="img-desk" src="images/image-product-1.jpg" />
+          <img class="slide-desk" alt="img-desk"  src="images/image-product-2.jpg" />
+          <img class="slide-desk" alt="img-desk"  src="images/image-product-3.jpg" />
+          <img class="slide-desk" alt="img-desk"  src="images/image-product-4.jpg" />
           <button class="prev" onclick="plusDivsDesk(-1)">&#10094;</button>
           <button class="next" onclick="plusDivsDesk(1)">&#10095;</button>
         </div>
@@ -199,7 +201,7 @@
             <button class="plus" onclick="plusFun()">+</button>
           </div>
           <button class="btn-add" onclick="addToCart()">
-            <img class="img-card" src="images/white-cart.svg" /> Add to cart
+            <img class="img-card" alt="img-card" src="images/white-cart.svg" /> Add to cart
           </button>
         </div>
       </div>
