--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
           onclick="aboveLayer()"
         />
         <div class="product-small">
-          <div class="img-slide" onclick="showBorder(this)">
+          <div class="img-slide" onclick="showBorder(this)" id="first-img">
             <img
+              id="default-imgg"
               class="product-sm"
               src="images/image-product-1-thumbnail.jpg"
               alt="prod-imgg"
