--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
           <button class="next" onclick="plusDivsDesk(1)">&#10095;</button>
         </div>
         <div class="product-small">
-          <div class="img-slide" onclick="showBorder(this)">
+          <div class="img-slide" onclick="showBorder(this)" id="first-img" >
             <img
               class="product-sm"
+              id="default-imgg"
               src="images/image-product-1-thumbnail.jpg"
               alt="prod-imgg"
               onclick="showpicDesk(this)"
