--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <button class="btn-add menu">Checkout</button>
     </div>
-    <section class="main-slider containerr">
+    <section class="main-slider containerr" role="main">
       <div class="slider">
         <img class="mySlides" alt="slide-img" src="images/image-product-1.jpg" />
         <img class="mySlides" alt="slide-img" src="images/image-product-2.jpg" />
