--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
           onclick="aboveLayer()"
         />
         <div class="product-small">
-          <div class="img-slide" onclick="showBorder(this)" id="first-img">
+          <div class="img-slide" onclick="showBorder(this)" id="first-img-2">
             <img
-              id="default-imgg"
+              id="default-imgg-2"
               class="product-sm"
               src="images/image-product-1-thumbnail.jpg"
               alt="prod-imgg"
